--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "express": "^4.18.2",
     "express-handlebars": "^7.1.1",
+    "mongodb": "^5.8.0",
+    "mongoose": "^7.4.4",
     "socket.io": "^4.7.2"
   }
 }
